test/files/ill-typed/011_let_lambda_app.lam
let twice = λy. y y in let retone = λq.1 in twice retone twice